--- a/index.html
+++ b/index.html
@@ -137,10 +137,11 @@
 
         .chart-content {
             flex: 1;
-            min-height: 0;
+            min-height: 200px;
             display: flex;
             align-items: center;
             justify-content: center;
+            overflow: hidden;
         }
 
         .chart-content svg {
@@ -203,7 +204,8 @@
         @media (max-width: 1366px) {
             .main-content {
                 grid-template-columns: 1fr 1fr;
-                grid-template-rows: 1fr 1fr 1fr;
+                grid-template-rows: auto auto auto;
+                min-height: 400px;
             }
             
             .chart-panel.span-2 {
