--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            height: 100vh;
+            min-height: 100vh;
             overflow: hidden;
         }
 
@@ -26,7 +26,6 @@
             flex-direction: column;
             padding: 0.5rem;
             gap: 0.5rem;
-            overflow: hidden;
         }
 
         .header {
